firebase hosting setup with Github Action

--- a/package.json
+++ b/package.json
@@ -43,5 +43,18 @@
       "not dead",
       "not op_mini all"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ronald03/netflix-trailer.git"
+  },
+  "author": "RonaldC",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ronald03/netflix-trailer/issues"
+  },
+  "homepage": "https://github.com/Ronald03/netflix-trailer#readme"
 }
